ajuste swagger
